--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -48,13 +48,6 @@ import { CDN_URL } from "@/config";
       <div class="grid">
         <div class="team-member">
           <img
-            src={`${CDN_URL}/equipo/esteban_caiza.webp`}
-            alt="Team Member - Esteban Caiza"
-          />
-          <h3>Esteban Caiza</h3>
-        </div>
-        <div class="team-member">
-          <img
             src={`${CDN_URL}/equipo/lizeth_narvaez.webp`}
             alt="Team Member - Lizeth Narvaez"
           />
@@ -69,17 +62,24 @@ import { CDN_URL } from "@/config";
         </div>
         <div class="team-member">
           <img
-            src={`${CDN_URL}/equipo/byron_peralta.webp`}
-            alt="Team Member - Byron Peralta"
-          />
-          <h3>Byron Peralta</h3>
-        </div>
-        <div class="team-member">
-          <img
             src={`${CDN_URL}/equipo/tatiana_paucar.webp`}
             alt="Team Member - Tatiana Paucar"
           />
           <h3>Tatiana Paucar</h3>
+        </div>
+        <div class="team-member">
+          <img
+            src={`${CDN_URL}/equipo/esteban_caiza.webp`}
+            alt="Team Member - Esteban Caiza"
+          />
+          <h3>Esteban Caiza</h3>
+        </div>
+        <div class="team-member">
+          <img
+            src={`${CDN_URL}/equipo/byron_peralta.webp`}
+            alt="Team Member - Byron Peralta"
+          />
+          <h3>Byron Peralta</h3>
         </div>
         <div class="team-member">
           <img
@@ -145,8 +145,10 @@ import { CDN_URL } from "@/config";
 
   .mission-vision {
     display: flex;
+    height: 70vh;
     gap: var(--spacing-lg);
     justify-content: center;
+    align-items: center;
   }
   .mission-vision .item {
     max-width: 400px;
@@ -155,7 +157,7 @@ import { CDN_URL } from "@/config";
 
   .grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(3, minmax(250px, 1fr));
     gap: var(--spacing-lg);
   }
   .team-member {
